--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,4 +6,7 @@
     .activeLink {
         @apply border-l-2 border-blue-500
     }
+    .selected-priority {
+        @apply w-full text-center py-3 my-3 border flex space-x-2 items-center justify-center border-slate-200 rounded-lg text-slate-700 hover:bg-green-500 hover:text-white hover:shadow transition duration-150
+    }
 }
